--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ethjs-ens",
+  "name": "puffsjs-ens",
   "version": "2.0.1",
-  "description": "An ENS interface module built on EthJS.",
+  "description": "An PUFFScoin-ENS interface module built on PuffsJS.",
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js",
@@ -11,33 +11,33 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/ethjs/ethjs-ens.git"
+    "url": "git+ssh://git@github.com/puffscoin/puffsjs-ens.git"
   },
   "keywords": [
-    "Ethereum",
+    "PUFFScoin",
     "DNS",
-    "ENS",
-    "EthJS"
+    "PUFFScoin-ENS",
+    "PuffsJS"
   ],
-  "author": "Dan Finlay",
+  "author": "Abvhiael Stuart",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ethjs/ethjs-ens/issues"
+    "url": "https://github.com/puffscoin/puffsjs-ens/issues"
   },
-  "homepage": "https://github.com/ethjs/ethjs-ens#readme",
+  "homepage": "https://github.com/puffscoin/puffsjs-ens#readme",
   "dependencies": {
-    "eth-ens-namehash": "^1.0.2",
-    "ethereum-ens-network-map": "^1.0.0",
-    "ethjs-contract": "^0.1.7",
-    "ethjs-query": "^0.2.4"
+    "puffs-ens-namehash": "^1.0.2",
+    "puffscoin-ens-network-map": "^1.0.0",
+    "puffsjs-contract": "^0.1.7",
+    "puffsjs-query": "^0.2.4"
   },
   "devDependencies": {
     "coveralls": "^2.12.0",
     "eslint": "^4.7.1",
     "ethereumjs-testrpc": "^3.0.3",
-    "ethjs": "^0.2.5",
-    "ethjs-provider-http": "^0.1.6",
-    "ethjs-query": "^0.2.4",
+    "puffsjs": "^0.2.5",
+    "puffsjs-provider-http": "^0.1.6",
+    "puffsjs-query": "^0.2.4",
     "istanbul": "^0.4.5",
     "sinon": "^2.1.0",
     "solc": "^0.4.9",
